Fix for bug #13440: Repaint problems when typing at the end of a document.

- modified nsScrollingView::ComputeScrollOffsets()
    so that it doesn't change the scrolled offsets
    just because the document size changed.